# orthw-python

./: .pre-commit-config.yaml  README.md  pyproject.toml
.github/: CODEOWNERS
.github/workflows/: build_and_publish.yaml  commit_checks.yaml
src/orthw/: __init__.py  __main__.py  __version__.py  orthw.py
src/orthw/commands/: __init__.py  analyze.py  check_advisories.py  clean.py  copyrights.py  create_analyzer_results.py  delete_scan_results.py  evaluate.py  export_copyright_garbage.py  find_license_url.py  find_scans_for_package.py  generate_license_classification_request.py  handled_licenses.py  handled_licenses_by_category.py  init.py  licenses.py  offending_licenses.py  offending_packages.py  packages.py  packages_for_detected_licenses.py  raw_licenses.py  report.py  scan.py  scan_results.py  update.py
src/orthw/commands/package_config/: __init__.py  clean.py  create.py  export_curations.py  export_path_excludes.py  find.py  format.py  import_curations.py  import_path_excludes.py  sort.py
src/orthw/commands/repository_config/: __init__.py  clean.py  export_curations.py  export_path_excludes.py  format.py  generate_project_excludes.py  generate_rule_violation_resolutions.py  generate_scope_excludes.py  generate_timeout_error_resolutions.py  import_curations.py  import_curations_update_only.py  import_path_excludes.py  import_path_excludes_update_only.py  sort.py
src/orthw/templates/: __init__.py
src/orthw/utils/: __init__.py  checksum.py  cmdgroups.py  database.py  docker.py  orthwclickgroup.py  process.py  required.py  settings.py
