[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "orthw"
version = "0.2.0"
description = "orthw is a python app designed to simplify and speed up common tasks performed when processing ort scan results. It supports a number of commands, which can be run in the terminal."
authors = [
    { name = "The ORTHW Project Authors" } ]
maintainers = [
    { name = "Frank Viernau", email = "frank_viernau@epam.com" },
    { name = "Helio Chissini de Castro", email = "heliocastro@gmail.com" },
    { name = "Thomas Steenbergen", email = "opensource@steenbe.nl" }
]
readme = "README.md"
license = "Apache-2.0"
license-files = [ "LICENSE" ]
keywords = [
    "ort",
    "orthw",
    "compliance",
    "open source license compliance",
    "open source licensing",
    "automation"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
requires-python = ">=3.8"
dependencies = [
    "appdirs>=1.4.4",
    "click>=8.1.8",
    "dict2obj>=1.2.0",
    "docker>=7.1.0",
    "gitpython>=3.1.44",
    "importlib-metadata>=8.5.0",
    "jinja2>=3.1.5",
    "psycopg2-binary>=2.9.10",
    "pydantic>=2.10.5",
    "pydantic-settings>=2.7.1",
    "python-dotenv>=1.0.1",
    "pyyaml>=6.0.2",
    "requests>=2.32.3",
    "rich>=13.9.4",
    "toml>=0.10.2",
    "yaml-settings-pydantic>=2.2.0",
]

[dependency-groups]
dev = [
    "mkdocs-material>=9.5.49",
    "mypy>=1.14.1",
    "pre-commit>=3.5.0",
    "pycodestyle>=2.12.1",
    "pytest-cov>=5.0.0",
    "pytest-mypy>=0.10.3",
    "ruff>=0.9.1",
    "types-pyyaml>=6.0.12.20241230",
    "types-requests>=2.32.0.20241016",
    "types-toml>=0.10.8.20240310",
]

[project.scripts]
orthw = "orthw.orthw:main"

[tool.pytest.ini_options]
addopts = ["--import-mode=importlib"]
log_cli = true
log_cli_level = "INFO"
pythonpath = "src"

[tool.pylint.messages_control]
disable = [
    "abstract-method",
    "arguments-differ",
    "attribute-defined-outside-init",
    "blacklisted-name",
    "chained-comparison",
    "duplicate-code",
    "eval-used",
    "exec-used",
    "expression-not-assigned",
    "fixme",
    "global-statement",
    "invalid-name",
    "import-error",
    "logging-fstring-interpolation",
    "missing-docstring",
    "no-member",
    "no-name-in-module",
    "protected-access",
    "redefined-argument-from-local",
    "redefined-outer-name",
    "reimported",
    "stop-iteration-return",
    "too-few-public-methods",
    "too-many-ancestors",
    "too-many-arguments",
    "too-many-branches",
    "too-many-instance-attributes",
    "too-many-lines",
    "too-many-locals",
    "too-many-return-statements",
    "too-many-statements",
    "unexpected-special-method-signature",
    "unspecified-encoding",
]

[tool.mypy]
plugins = [
    "pydantic.mypy",
]

check_untyped_defs = true
disallow_any_generics = true
disallow_untyped_defs = true
disallow_untyped_calls = false
follow_imports = "normal"
ignore_missing_imports = true
no_implicit_reexport = true
strict_optional = true
warn_redundant_casts = true
warn_unused_ignores = true

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true


[tool.ruff]
fix = true
line-length = 120

# Exclude a variety of commonly ignored directories.
extend-exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
]

# Assume Python 3.10.
target-version = "py310"

[tool.ruff.lint]
extend-select = [
    "E",   # pycodestyle error
    "W",   # pycodestyle warning
    "F",   # pyflakes
    "A",   # flakes8-builtins
    "COM", # flakes8-commas
    "C4",  # flake8-comprehensions
    "Q",   # flake8-quotes
    "SIM", # flake8-simplify
    "PTH", # flake8-use-pathlib
    "I",   # isort
    "N",   # pep8 naming
    "UP",  # pyupgrade
    "S",   # bandit
]
ignore = [
    'N802',   # function name should be lowercase
    'SIM105', # Suggest contextlib instead of try/except with pass
    'A004',  # Python shadow builtins
    'COM812',
]
# Unlike Flake8, default to a complexity level of 10.
mccabe.max-complexity = 10
per-file-ignores = {}
flake8-tidy-imports.ban-relative-imports = "all"
isort.required-imports = ["from __future__ import annotations"]
# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pyright]
reportUnboundVariable = false
