[build-system]
requires = ["uv_build>=0.8.12,<0.9.21"]
build-backend = "uv_build"

[project]
name = "orthw"
version = "0.3.0"
description = "orthw is a python app designed to simplify and speed up common tasks performed when processing ort scan results. It supports a number of commands, which can be run in the terminal."
authors = [
    { name = "The ORTHW Project Authors" } ]
maintainers = [
    { name = "Frank Viernau", email = "frank_viernau@epam.com" },
    { name = "Helio Chissini de Castro", email = "heliocastro@gmail.com" },
    { name = "Thomas Steenbergen", email = "opensource@steenbe.nl" }
]
readme = "README.md"
license = "Apache-2.0"
license-files = [ "LICENSE" ]
keywords = [
    "ort",
    "orthw",
    "compliance",
    "open source license compliance",
    "open source licensing",
    "automation"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
requires-python = ">=3.13"
dependencies = [
    "appdirs>=1.4.4",
    "click>=8.1.8",
    "dict2obj>=1.2.0",
    "docker>=7.1.0",
    "gitpython>=3.1.46",
    "importlib-metadata>=8.5.0",
    "jinja2>=3.1.6",
    "psycopg2-binary>=2.9.10",
    "pydantic>=2.10.6",
    "pydantic-settings>=2.8.1",
    "python-dotenv>=1.0.1",
    "pyyaml>=6.0.3",
    "requests>=2.32.4",
    "rich>=14.2.0",
    "toml>=0.10.2",
    "yaml-settings-pydantic>=2.2.0",
]

[dependency-groups]
dev = [
    "mkdocs-material>=9.7.1",
    "pre-commit>=3.5.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.14.10",
    "ty>=0.0.9",
    "types-pyyaml>=6.0.12.20241230",
    "types-requests>=2.32.0.20241016",
    "types-toml>=0.10.8.20240310",
]

[project.scripts]
orthw = "orthw.orthw:main"

[tool.pytest.ini_options]
addopts = ["--import-mode=importlib"]
log_cli = true
log_cli_level = "INFO"
pythonpath = "src"

check_untyped_defs = true
disallow_any_generics = true
disallow_untyped_defs = true
disallow_untyped_calls = false
follow_imports = "normal"
ignore_missing_imports = true
no_implicit_reexport = true
strict_optional = true
warn_redundant_casts = true
warn_unused_ignores = true

[tool.ruff]
fix = true
line-length = 120

# Exclude a variety of commonly ignored directories.
extend-exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
]

# Assume Python 3.13.
target-version = "py313"

[tool.ruff.lint]
extend-select = [
    "E",   # pycodestyle error
    "W",   # pycodestyle warning
    "F",   # pyflakes
    "A",   # flakes8-builtins
    "C4",  # flake8-comprehensions
    "Q",   # flake8-quotes
    "SIM", # flake8-simplify
    "PTH", # flake8-use-pathlib
    "I",   # isort
    "N",   # pep8 naming
    "UP",  # pyupgrade
    "S",   # bandit
    "D",   # pydocstyle
]
ignore = [
    'N802',   # function name should be lowercase
    'SIM105', # Suggest contextlib instead of try/except with pass
    'A005',   # Python shadow
    'D100',   # pydocstring public module
    'D104',   # pydocstring public package
    'D107',   # pydocstring init
    'D203',   # incorrect-blank-line-before-class
    'D213',   # multi-line-summary-second-line
]
# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"
flake8-tidy-imports.ban-relative-imports = "all"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
